tests/integration/tests/orm/ui/fail/manager_wrong_model.stderr
error[E0271]: type mismatch resolving `<OtherManager as CustomManager>::Model == User`
  --> tests/orm/ui/fail/manager_wrong_model.rs:30:61
   |
30 | #[model(app_label = "test", table_name = "users", manager = OtherManager)]
   |                                                             ^^^^^^^^^^^^ type mismatch resolving `<OtherManager as CustomManager>::Model == User`
   |
note: expected this to be `User`
  --> tests/orm/ui/fail/manager_wrong_model.rs:20:15
   |
20 |     type Model = Other;
   |                  ^^^^^
note: required by a bound in `reinhardt_db::orm::Model::Objects`
  --> $WORKSPACE/crates/reinhardt-db/src/orm/model.rs
   |
   |     type Objects: super::custom_manager::CustomManager<Model = Self> + Default;
   |                                                        ^^^^^^^^^^^^ required by this bound in `Model::Objects`
